--- a/login.html
+++ b/login.html
@@ -42,6 +42,7 @@
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Login</button>
+            <p>Don't have account?<a href="register.html">Signup</a></p>
           </form>
         </div>
       </div>
