--- a/register.html
+++ b/register.html
@@ -11,7 +11,7 @@
   <!-- ✅ Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="index.html"><- Home</a>
+      <a class="navbar-brand" href="index.html">Home</a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
@@ -34,30 +34,30 @@
       <div class="col-md-5">
         <div class="card shadow-lg p-4">
           <h3 class="text-center mb-3">Register</h3>
-          <form id="registerForm">
+          <form id="registerForm" action="PHP/register.php" method="POST">
             
             <!-- Username -->
             <div class="mb-3">
               <label for="username" class="form-label">Username</label>
-              <input type="text" id="username" class="form-control" placeholder="Enter your username" required>
+              <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
             </div>
 
             <!-- Email -->
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" id="email" class="form-control" placeholder="Enter your email" required>
+              <input type="email" id="email" name="email" class="form-control" placeholder="Enter your email" required>
             </div>
 
             <!-- Password -->
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" class="form-control" placeholder="Enter your password" required minlength="6">
+              <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required minlength="6">
             </div>
 
             <!-- Role -->
             <div class="mb-3">
               <label for="role" class="form-label">Register As</label>
-              <select id="role" class="form-select" required>
+              <select id="role" name="role" class="form-select" required>
                 <option value="">-- Select Role --</option>
                 <option value="doctor">Doctor</option>
                 <option value="patient">Patient</option>
@@ -77,7 +77,7 @@
   </div>
 
   <!-- ✅ Scripts -->
-  <script>
+  <!-- <script>
     // --- Registration ---
     document.getElementById("registerForm").addEventListener("submit", function(e){
       e.preventDefault();
@@ -109,7 +109,7 @@
       alert("You have been logged out!");
       window.location.href = "index.html";
     });
-  </script>
+  </script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
