--- a/login.html
+++ b/login.html
@@ -34,34 +34,23 @@
       <div class="col-md-5">
         <div class="card shadow-lg p-4">
           <h3 class="text-center mb-3">Login</h3>
-          <form id="loginForm">
+          <form action="PHP/login.php" method="POST" id="loginForm" >
             <!-- Username -->
             <div class="mb-3">
               <label for="username" class="form-label">Username</label>
-              <input type="text" id="username" class="form-control" placeholder="Enter username" required>
+              <input type="text" id="username" name="username" class="form-control" placeholder="Enter username" required>
             </div>
 
             <!-- Email -->
             <div class="mb-3">
               <label for="email" class="form-label">Email</label>
-              <input type="email" id="email" class="form-control" placeholder="Enter email" required>
+              <input type="email" id="email" name="email" class="form-control" placeholder="Enter email" required>
             </div>
 
             <!-- Password -->
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" class="form-control" placeholder="Enter password" required>
-            </div>
-
-            <!-- Role -->
-            <div class="mb-3">
-              <label for="role" class="form-label">Login As</label>
-              <select id="role" class="form-select" required>
-                <option value="">-- Select Role --</option>
-                <option value="doctor">Doctor</option>
-                <option value="patient">Patient</option>
-                <option value="admin">Admin</option>
-              </select>
+              <input type="password" id="password" name="password" class="form-control" placeholder="Enter password" required>
             </div>
 
             <button type="submit" class="btn btn-primary w-100">Login</button>
