--- a/login.html
+++ b/login.html
@@ -64,7 +64,7 @@
     </div>
   </div>
 
-  <!-- ✅ Scripts -->
+  <!-- ✅ Scripts
   <script>
     // --- Handle Login ---
     document.getElementById("loginForm").addEventListener("submit", function(e){
@@ -118,7 +118,7 @@
       alert("You have been logged out!");
       window.location.href = "index.html";
     });
-  </script>
+  </script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
