--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-          <li class="nav-item"><a class="nav-link text-warning" href="#" id="logoutLink">Logout</a></li>
+          <li class="nav-item"><a class="nav-link text-warning" href="PHP/logout.php" id="logoutLink">Logout</a></li>
           <li class="nav-item"><a class="nav-link" href="admin_dashboard.html">Admin</a></li>
         </ul>
       </div>
@@ -29,13 +29,13 @@
     <h1>Welcome to Hospital Management System</h1>
     <p class="lead">Manage patients, doctors, and reports efficiently.</p>
     <div class="mt-4">
-      <a href="admin_dashboard.html" class="btn btn-success btn-lg mx-2">Admin</a>
+      <a href="admin_dashboard.php" class="btn btn-success btn-lg mx-2">Admin</a>
       <a href="login.html" class="btn btn-primary btn-lg mx-2">Login</a>
       <a href="register.html" class="btn btn-success btn-lg mx-2">Register</a>
     </div>
   </section>
 
-  <script>
+  <!-- <script>
     // Check if user is logged in
     const user = JSON.parse(localStorage.getItem("userData"));
     const logoutLink = document.getElementById("logoutLink");
@@ -49,7 +49,7 @@
       alert("You have been logged out!");
       window.location.href = "index.html";
     });
-  </script>
+  </script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
