rearranged the structure of the folders and files of the project and made changes accordingly for accessing them

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
           <li class="nav-item"><a class="nav-link text-warning" href="PHP/logout.php" id="logoutLink">Logout</a></li>
-          <li class="nav-item"><a class="nav-link" href="admin_dashboard.html">Admin</a></li>
+          <li class="nav-item"><a class="nav-link" href="Admin/admin_dashboard.php">Admin</a></li>
         </ul>
       </div>
     </div>
@@ -29,7 +29,7 @@
     <h1>Welcome to Hospital Management System</h1>
     <p class="lead">Manage patients, doctors, and reports efficiently.</p>
     <div class="mt-4">
-      <a href="admin_dashboard.php" class="btn btn-success btn-lg mx-2">Admin</a>
+      <a href="Admin/admin_dashboard.php" class="btn btn-success btn-lg mx-2">Admin</a>
       <a href="login.html" class="btn btn-primary btn-lg mx-2">Login</a>
       <a href="register.html" class="btn btn-success btn-lg mx-2">Register</a>
     </div>
