--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="login.html">Login</a></li>
           <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-          <li class="nav-item"><a class="nav-link text-warning" href="#" id="logoutLink" style="display:none;">Logout</a></li>
+          <li class="nav-item"><a class="nav-link text-warning" href="PHP/logout.php" id="logoutLink" style="display:none;">Logout</a></li>
         </ul>
       </div>
     </div>
