--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home - Hospital Management System</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <style>
+    .hero{
+      background: url('images/hospital-banner.jpg') no-repeat center center/cover;
+      color:white;
+      min-height: 100vh;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      position:relative;
+    }
+
+    .hero::before{
+      content:"";
+      position:absolute;
+      top: 0;
+      left: 0;
+      width:100%;
+      height:100%;
+      background-color: #0000008c;
+      z-index: 0;
+    }
+    .hero-content{
+      position: relative;
+      z-index: 1;
+    }
+
+    .hero h1{
+      font-size: 51px;
+      font-weight: bold;
+    }
+
+   .hero p.lead{
+      font-size: 21px;
+    }
+
+    .hero .btn{
+      padding:12px 28px;
+      font-size:18px;
+      margin:8px;
+    }
+  </style>
 </head>
+
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
@@ -25,14 +70,17 @@
     </div>
   </nav>
 
-  <section class="text-center p-5 bg-light">
-    <h1>Welcome to Hospital Management System</h1>
-    <p class="lead">Manage patients, doctors, and reports efficiently.</p>
-    <div class="mt-4">
-      <a href="Admin/admin_dashboard.php" class="btn btn-success btn-lg mx-2">Admin</a>
-      <a href="login.html" class="btn btn-primary btn-lg mx-2">Login</a>
-      <a href="register.html" class="btn btn-success btn-lg mx-2">Register</a>
+  <section class="hero text-center p-5 bg-light">
+    <div class="hero-content">
+      <h1>Welcome to Hospital Management System</h1>
+      <p class="lead">Manage patients, doctors, and reports efficiently.</p>
+      <div class="mt-4">
+        <a href="Admin/admin_dashboard.php" class="btn btn-success btn-lg mx-2">Admin</a>
+        <a href="login.html" class="btn btn-primary btn-lg mx-2">Login</a>
+        <a href="register.html" class="btn btn-success btn-lg mx-2">Register</a>
+      </div>
     </div>
+
   </section>
 
   <!-- <script>
@@ -52,5 +100,7 @@
   </script> -->
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <footer>&copy;Hospital-Management-System</footer>
 </body>
+
 </html>
