--- a/register.html
+++ b/register.html
@@ -110,7 +110,7 @@
       window.location.href = "index.html";
     });
   </script> -->
-
+<footer>&copy;Hospital-Management-System</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
