--- a/register.html
+++ b/register.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Register - Hospital Management System</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
+
 <body class="bg-light">
 
   <!-- ✅ Navbar -->
@@ -35,11 +37,12 @@
         <div class="card shadow-lg p-4">
           <h3 class="text-center mb-3">Register</h3>
           <form id="registerForm" action="PHP/register.php" method="POST">
-            
+
             <!-- Username -->
             <div class="mb-3">
               <label for="username" class="form-label">Username</label>
-              <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username" required>
+              <input type="text" id="username" name="username" class="form-control" placeholder="Enter your username"
+                required>
             </div>
 
             <!-- Email -->
@@ -51,7 +54,8 @@
             <!-- Password -->
             <div class="mb-3">
               <label for="password" class="form-label">Password</label>
-              <input type="password" id="password" name="password" class="form-control" placeholder="Enter your password" required minlength="6">
+              <input type="password" id="password" name="password" class="form-control"
+                placeholder="Enter your password" required minlength="6">
             </div>
 
             <!-- Role -->
@@ -110,7 +114,8 @@
       window.location.href = "index.html";
     });
   </script> -->
-<footer>&copy;Hospital-Management-System</footer>
+  <footer>&copy;Hospital-Management-System</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
