--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
       font-size:18px;
       margin:8px;
     }
+
+     footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #222;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+    font-size: 14px;
+  }
   </style>
 </head>
 
